--- a/app/src/main/res/layout/fr_confirm_one_time_password.xml
+++ b/app/src/main/res/layout/fr_confirm_one_time_password.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_20dp"
             android:layout_marginTop="@dimen/dimen_60dp"
-            android:text="@{@string/confirm_one_time_password_message(viewModel.phoneNumberOrEmail)}"
+            android:text="@{@string/confirm_one_time_password_message(viewModel.phoneNumberOrEmailString)}"
             android:textAlignment="viewStart"
             android:textSize="@dimen/size_18sp"
             app:layout_constraintEnd_toEndOf="parent"
