--- a/app/src/main/res/navigation/auth_graph.xml
+++ b/app/src/main/res/navigation/auth_graph.xml
@@ -111,16 +111,24 @@
         android:name="com.wolfpackdigital.cashli.presentation.auth.signin.forgotPassword.confirmOneTimePassword.ConfirmOneTimePasswordFragment"
         android:label="ConfirmOneTimePasswordFragment"
         tools:layout="@layout/fr_confirm_one_time_password">
-        <action
-            android:id="@+id/action_confirmOneTimePasswordFragment_to_resetPasswordFragment"
-            app:destination="@id/resetPasswordFragment" />
         <argument
             android:name="phoneNumberOrEmail"
             app:argType="string" />
+        <argument
+            android:name="codeReceivedViaType"
+            app:argType="com.wolfpackdigital.cashli.domain.entities.enums.CodeReceivedViaType" />
+        <action
+            android:id="@+id/action_confirmOneTimePasswordFragment_to_resetPasswordFragment"
+            app:destination="@id/resetPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/resetPasswordFragment"
         android:name="com.wolfpackdigital.cashli.presentation.auth.signin.forgotPassword.resetPassword.ResetPasswordFragment"
         android:label="ResetPasswordFragment"
-        tools:layout="@layout/fr_reset_password"/>
+        tools:layout="@layout/fr_reset_password">
+        <argument
+            android:name="token"
+            app:argType="string" />
+
+    </fragment>
 </navigation>
