Small design change

--- a/app/src/main/res/layout/fr_home.xml
+++ b/app/src/main/res/layout/fr_home.xml
@@ -128,7 +128,8 @@
                     app:layout_constraintBottom_toTopOf="@id/btn_link_account"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/iv_lock"
-                    app:layout_constraintTop_toTopOf="@id/iv_lock" />
+                    app:layout_constraintTop_toTopOf="@id/iv_lock"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_link_account"
