--- a/app/src/main/res/drawable/ic_home_blue_dots.xml
+++ b/app/src/main/res/drawable/ic_home_blue_dots.xml
@@ -1,8 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="393dp"
     android:height="383dp"
     android:viewportWidth="393"
-    android:viewportHeight="383">
+    android:viewportHeight="383"
+    tools:ignore="VectorRaster">
   <path
       android:pathData="M95.44,274.94C95.33,274.61 95.59,274.44 95.73,274.21C96,273.78 96.44,273.8 96.83,273.87C97.08,273.92 97.28,274.18 97.52,274.35C97.8,274.55 98.19,274.75 98.01,275.14C97.84,275.48 97.67,275.91 97.13,275.93C96.67,275.94 95.59,275.36 95.44,274.95L95.44,274.94Z"
       android:fillColor="#5F6076"/>
