--- a/app/src/main/res/layout/fr_home.xml
+++ b/app/src/main/res/layout/fr_home.xml
@@ -216,13 +216,14 @@
                     android:layout_marginHorizontal="@dimen/dimen_28dp"
                     android:layout_marginTop="@dimen/dimen_36dp"
                     android:layout_marginBottom="@dimen/dimen_44dp"
-                    android:text="@string/up_to_150"
+                    android:text="@{@string/up_to_sum(viewModel.SUM_150)}"
                     android:textColor="@color/colorAccent"
                     android:textSize="@dimen/size_28sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_message_four" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_message_four"
+                    tools:text="Up to $150!" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
