--- a/app/src/main/res/drawable/scrollview_thumb.xml
+++ b/app/src/main/res/drawable/scrollview_thumb.xml
@@ -1,5 +1,5 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorGray76" />
+    <solid android:color="@color/colorPinkBF" />
     <corners android:radius="@dimen/dimen_16dp" />
 </shape>
