--- a/app/src/main/res/layout/fr_create_profile.xml
+++ b/app/src/main/res/layout/fr_create_profile.xml
@@ -47,7 +47,7 @@
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/scrollView"
-            style="@style/ScrollView.VerticalDarkScrollBar"
+            style="@style/ScrollView.VerticalPinkScrollBar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:isScrollContainer="false"
