--- a/app/src/main/res/layout/fr_home.xml
+++ b/app/src/main/res/layout/fr_home.xml
@@ -11,7 +11,7 @@
     </data>
 
     <androidx.core.widget.NestedScrollView
-        style="@style/ScrollView.VerticalDarkScrollBar"
+        style="@style/ScrollView.VerticalPinkScrollBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
