--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -141,7 +141,7 @@
         <item name="android:fillViewport">true</item>
     </style>
 
-    <style name="ScrollView.VerticalDarkScrollBar">
+    <style name="ScrollView.VerticalPinkScrollBar">
         <item name="android:fadeScrollbars">false</item>
         <item name="android:scrollbarThumbVertical">@drawable/scrollview_thumb</item>
         <item name="android:scrollbars">vertical</item>
