--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -13,8 +13,18 @@
         android:id="@+id/homeFragment"
         android:name="com.wolfpackdigital.cashli.presentation.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fr_home" />
+        tools:layout="@layout/fr_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_claimCashFragment"
+            app:destination="@id/claimCashFragment" />
+    </fragment>
 
     <include app:graph="@navigation/link_account_graph" />
+
+    <fragment
+        android:id="@+id/claimCashFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.claimCash.ClaimCashFragment"
+        android:label="CashClaimFragment"
+        tools:layout="@layout/fr_claim_cash" />
 
 </navigation>
