--- a/app/src/main/res/layout/fr_home.xml
+++ b/app/src/main/res/layout/fr_home.xml
@@ -92,7 +92,7 @@
                     style="@style/TextView.Bold"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/dimen_40dp"
+                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                     android:text="@string/link_account_message_one"
                     android:textAlignment="center"
                     android:textSize="@dimen/size_20sp"
@@ -105,7 +105,7 @@
                     android:id="@+id/iv_lock"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimen_6dp"
+                    android:layout_marginStart="@dimen/dimen_4dp"
                     android:layout_marginTop="@dimen/dimen_16dp"
                     android:contentDescription="@null"
                     app:layout_constraintStart_toStartOf="@id/tv_message_one"
@@ -119,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_4dp"
                     android:layout_marginTop="@dimen/dimen_4dp"
-                    android:layout_marginEnd="@dimen/dimen_40dp"
+                    android:layout_marginEnd="@dimen/dimen_20dp"
                     android:layout_marginBottom="@dimen/dimen_24dp"
                     android:lineSpacingExtra="@dimen/dimen_4dp"
                     android:text="@string/link_my_bank_account_message_four"
@@ -180,6 +180,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_request_cash" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -190,10 +191,10 @@
                     android:layout_marginHorizontal="@dimen/dimen_28dp"
                     android:text="@string/request_a_cash_advance"
                     android:textSize="@dimen/size_20sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/tv_message_four"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/iv_request_cash" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_message_four"
