--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,7 +53,7 @@
         <item name="rippleColor">@color/colorPinkBF</item>
     </style>
 
-    <style name="Widget.Cashli.Button.PrimaryDark" tools:ignore="UnusedResources">
+    <style name="Widget.Cashli.Button.PrimaryDark">
         <item name="android:theme">@style/ButtonTheme.PrimaryDark</item>
         <item name="android:height">@dimen/dimen_64dp</item>
         <item name="rippleColor">@color/colorGray64</item>
@@ -152,14 +152,29 @@
         <item name="android:textSize">@dimen/size_34sp</item>
     </style>
 
+    <style name="TextView.H4" parent="TextView">
+        <item name="fontFamily">@font/lato_bold</item>
+        <item name="android:textSize">@dimen/size_20sp</item>
+    </style>
+
     <style name="TextView.H6" parent="TextView">
         <item name="fontFamily">@font/lato_semi_bold</item>
         <item name="android:textSize">@dimen/size_16sp</item>
     </style>
 
+    <style name="TextView.S1" parent="TextView">
+        <item name="fontFamily">@font/lato</item>
+        <item name="android:textSize">@dimen/size_14sp</item>
+    </style>
+
     <style name="TextView.S2" parent="TextView">
         <item name="fontFamily">@font/lato_bold</item>
         <item name="android:textSize">@dimen/size_14sp</item>
+    </style>
+
+    <style name="TextView.C1" parent="TextView">
+        <item name="fontFamily">@font/lato</item>
+        <item name="android:textSize">@dimen/size_12sp</item>
     </style>
 
     <style name="TextView.C2" parent="TextView">
